@@ -65,6 +65,8 @@ Version 1.3
  - Make sure we refresh all UserCodes upto the first available slot unless
    RefreshAllUserCodes is true in Options.xml (Justin)
  - Added Qubino ZMNHIA2 device thanks to Paul (Alex)
+ - Fixed Issue 444 - Added Aeon Aeon Labs Micro Smart Energy Dimmer thanks
+   to yy (Alex)
 
 Version 1.2 
  - Released on 15/10/14
